# reviewgate

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  action.yml  alembic.ini  pyproject.toml
.cursor/rules/: pr-watch.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-llm-review.yml  pr-watchdog.yml  release.yml  reviewgate.yml
alembic/: env.py
alembic/versions/: 20260510_0001_schema_section_16_1.py  20260511_0002_beta_feedback.py
docs/: BETA_READINESS_GATE.md  DESIGN.md  HOSTED_LOCAL.md  MANUAL_BETA_QA.md  ONBOARDING.md  QUICKSTART.md
reviewgate/: __init__.py
reviewgate-action/: README.md  action.yml
reviewgate-action/src/reviewgate_action/: __init__.py  fetch_pr.py  post_comment.py  run_core.py
reviewgate/core/: __init__.py  heuristics.py  report.py  schemas.py
scripts/: _pr_review_http.py  _pr_review_llm.py  _pr_review_payload.py  post_pr_llm_review.py
src/reviewgate/: __init__.py
src/reviewgate/app/: __init__.py  api_cli.py  beta_feedback.py  beta_leads.py  main.py  privacy.py  redis_client.py  settings.py  site_pages.py
src/reviewgate/app/analysis/: __init__.py  broker_install.py  cache.py  config_hash.py  hosted_github_outputs.py  jobs.py  pipeline.py  pr_file_tiers.py  pr_metadata_hash.py  result_cache.py  synchronize_debounce.py  webhook_purge_scheduler.py  worker_app.py  worker_cli.py  worker_job_lock.py
src/reviewgate/app/github/: __init__.py  auth.py  checks.py  client.py  coexistence.py  comments.py  labels.py
src/reviewgate/app/llm/: __init__.py  budgets.py  client.py  input_pack.py  merge_report.py  prompts.py  reviewability_v1.txt  schemas.py  stage.py  verdict.py
src/reviewgate/app/rate_limit/: __init__.py  limiter.py
src/reviewgate/app/storage/: __init__.py  db.py  installation_purge.py  models.py  repositories.py  webhook_purge.py
src/reviewgate/app/webhooks/: __init__.py  dedupe.py  enqueue_analysis_dedupe.py  enqueue_policy.py  github.py  installation_persist.py
src/reviewgate/core/: __init__.py  _base.py  aggregate.py  automation_pr.py  categorizer.py  cli.py  config.py  count_warnings.py  engine.py  ignored_paths.py  linked_issue.py  mixed_concern.py  paths.py  pr_body.py  report.py  risky_paths.py  schemas.py  size.py  tests_coverage.py
src/reviewgate_action/: README.md  action.yml  fetch_pr.py  run_core.py
src/reviewgate_action/reviewgate_action/: __init__.py  coexistence.py  fetch_pr.py  post_comment.py  run_core.py  summary.py
tests/: test_action_metadata.py  test_aggregate.py  test_analysis_pipeline.py  test_analysis_result_cache.py  test_app_analysis_cache_keys.py  test_app_redis_client.py  test_app_settings.py  test_automation_pr.py  test_beta_feedback_api.py  test_beta_leads_api.py  test_categorizer.py  test_cli.py  test_coexistence.py  test_config.py  test_config_hash.py  test_core_purity.py  test_dramatiq_jobs.py  test_dramatiq_jobs_pipeline_failures.py  test_engine.py  test_enqueue_policy.py  test_fastapi_health.py  test_fastapi_privacy.py  test_fastapi_site_pages.py  test_fetch_pr.py  test_github_app_auth.py  test_github_checks.py  test_github_client.py  test_github_coexistence.py  test_github_comments.py  test_github_labels.py  test_golden_fixtures.py  test_hosted_cli_extras.py  test_hosted_github_outputs.py  test_installation_persist.py  test_installation_purge.py  test_linked_issue.py  test_llm_client_parse.py  test_llm_input_pack.py  test_llm_merge_and_stage.py  test_llm_verdict.py  (+27 more)
tests/fixtures/m2_golden/: 01_small_clean_pr.json  02_large_human_authored_pr.json  03_large_lockfile_only_pr.json  04_generated_code_pr.json  05_snapshot_heavy_pr.json  06_risky_migration_pr.json  07_auth_change_without_context.json  08_dependency_update_only.json  09_dependency_update_plus_behavior_change.json  10_source_tests_docs_normal_feature.json  11_billing_auth_infra_suspicious_mixed_concern.json  12_massive_refactor.json  13_docs_only_pr.json  14_test_only_pr.json  manifest.py
tests/integration/: __init__.py  test_github_api_mocked.py
