[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reviewgate"
version = "0.0.0"
description = "reviewgate-core: deterministic PR reviewability engine for ReviewGate (open-source package; see docs/DESIGN.md)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "ReviewGate contributors" }]

dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    # `pathspec` is a pure-Python (no I/O, no native deps) gitignore-style
    # glob matcher used by `reviewgate.core.paths` for §10.6-§10.9 file-pattern
    # matching. Picked over a hand-rolled regex translator so we get
    # battle-tested gitignore semantics for `**`, basename-only patterns
    # (`Dockerfile`), and rooted paths (`vendor/**`).
    "pathspec>=0.12",
]

[project.scripts]
# Local-fixture CLI per DESIGN.md §5.1 / §25 M1; see src/reviewgate/core/cli.py.
reviewgate-core = "reviewgate.core.cli:main"

[project.optional-dependencies]
# `types-PyYAML` is a stub-only package: PyYAML 6.x ships no inline type
# information, so consumers running `mypy --strict` (or pyright) need the
# stubs to keep the deterministic engine free of `Any`-by-import. It is a
# dev-only dependency; no runtime code imports from `types-PyYAML`.
dev = [
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `tests` is on the import path so test modules can pull shared fixtures
# from `tests/fixtures/...` without per-test sys.path shims (issue #17
# golden fixture manifest, see `tests/fixtures/m2_golden/manifest.py`).
# `reviewgate-action/src` is added so the open-source GitHub Action
# runtime modules (`reviewgate_action.*`, see `reviewgate-action/src/`)
# are importable from `tests/test_fetch_pr.py` and friends without an
# extra editable install at test time.
pythonpath = ["src", "tests", "reviewgate-action/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/reviewgate"]
