[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reviewgate"
version = "0.1.0"
description = "Deterministic pull-request reviewability engine for ReviewGate (open-source core; see docs/DESIGN.md)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Leonardo Araujo" },
    { name = "ReviewGate contributors" },
]
maintainers = [
    { name = "Leonardo Araujo" },
]
keywords = [
    "code-review",
    "github",
    "github-action",
    "pull-request",
    "reviewability",
    "review-gate",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    # `pathspec` is a pure-Python (no I/O, no native deps) gitignore-style
    # glob matcher used by `reviewgate.core.paths` for §10.6-§10.9 file-pattern
    # matching. Picked over a hand-rolled regex translator so we get
    # battle-tested gitignore semantics for `**`, basename-only patterns
    # (`Dockerfile`), and rooted paths (`vendor/**`).
    "pathspec>=0.12",
]

[project.urls]
Homepage = "https://github.com/leo-aa88/reviewgate"
Documentation = "https://github.com/leo-aa88/reviewgate#readme"
Repository = "https://github.com/leo-aa88/reviewgate"
Issues = "https://github.com/leo-aa88/reviewgate/issues"
Changelog = "https://github.com/leo-aa88/reviewgate/blob/main/CHANGELOG.md"
Design = "https://github.com/leo-aa88/reviewgate/blob/main/docs/DESIGN.md"

[project.scripts]
# Local-fixture CLI per DESIGN.md §5.1 / §25 M1; see src/reviewgate/core/cli.py.
reviewgate-core = "reviewgate.core.cli:main"

[project.optional-dependencies]
# `types-PyYAML` is a stub-only package: PyYAML 6.x ships no inline type
# information, so consumers running `mypy --strict` (or pyright) need the
# stubs to keep the deterministic engine free of `Any`-by-import. It is a
# dev-only dependency; no runtime code imports from `types-PyYAML`.
dev = [
    "pytest>=8.0",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``src`` is on the path so ``import reviewgate`` / ``import reviewgate_action``
# resolve without an editable install. Omit the repo root so pytest does not
# mask broken installs by importing loose modules from ``.``. ``tests`` enables
# shared fixtures (``tests/fixtures/...``, see ``tests/fixtures/m2_golden/manifest.py``).
pythonpath = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/reviewgate", "src/reviewgate_action"]

[tool.hatch.build.targets.sdist]
# Whitelist the source tree so the sdist never bundles a local
# virtualenv, build cache, or editor scratch directory by accident.
include = [
    "src/reviewgate",
    "src/reviewgate_action",
    "tests",
    "docs/DESIGN.md",
    "docs/ONBOARDING.md",
    "docs/QUICKSTART.md",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "SUPPORT.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    ".venv*",
    "venv",
    "dist",
    "build",
    ".github",
    ".cursor",
    "scripts",
]
