[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "reviewgate"
version = "0.1.0"
description = "Deterministic pull-request reviewability engine for ReviewGate (open source; see docs/DESIGN.md)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Leonardo Araujo" },
    { name = "ReviewGate contributors" },
]
maintainers = [
    { name = "Leonardo Araujo" },
]
keywords = [
    "code-review",
    "github",
    "github-action",
    "pull-request",
    "reviewability",
    "review-gate",
    "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    # `pathspec` is a pure-Python (no I/O, no native deps) gitignore-style
    # glob matcher used by `reviewgate.core.paths` for §10.6-§10.9 file-pattern
    # matching. Picked over a hand-rolled regex translator so we get
    # battle-tested gitignore semantics for `**`, basename-only patterns
    # (`Dockerfile`), and rooted paths (`vendor/**`).
    "pathspec>=0.12",
]

[project.urls]
Homepage = "https://github.com/leo-aa88/reviewgate"
Documentation = "https://github.com/leo-aa88/reviewgate#readme"
Repository = "https://github.com/leo-aa88/reviewgate"
Issues = "https://github.com/leo-aa88/reviewgate/issues"
Changelog = "https://github.com/leo-aa88/reviewgate/blob/main/CHANGELOG.md"
Design = "https://github.com/leo-aa88/reviewgate/blob/main/docs/DESIGN.md"

[project.scripts]
# Local-fixture CLI per DESIGN.md §5.1 / §25 M1; see src/reviewgate/core/cli.py.
reviewgate-core = "reviewgate.core.cli:main"
# Hosted worker (Dramatiq + Redis) per DESIGN.md §13.7 / issue #30.
reviewgate-worker = "reviewgate.app.analysis.worker_cli:main"
# Hosted HTTP API (FastAPI + uvicorn) per DESIGN.md §17 / issue #32.
reviewgate-api = "reviewgate.app.api_cli:main"

[project.optional-dependencies]
# `types-PyYAML` is a stub-only package: PyYAML 6.x ships no inline type
# information, so consumers running `mypy --strict` (or pyright) need the
# stubs to keep the deterministic engine free of `Any`-by-import. It is a
# dev-only dependency; no runtime code imports from `types-PyYAML`.
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "types-PyYAML>=6.0",
]
# Hosted GitHub App persistence (``docs/DESIGN.md`` §16.1). Kept optional so
# ``reviewgate`` core wheels stay free of database drivers (see purity tests).
app = [
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "dramatiq[redis]>=1.17.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Only add ``tests`` so shared fixtures import; ``reviewgate`` and
# ``reviewgate_action`` resolve via the editable / wheel install (``pip install
# -e ".[dev]"``), matching production imports instead of shadowing them with
# raw ``src/`` on ``PYTHONPATH``.
pythonpath = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    # Keep existing style stable while still enforcing correctness-oriented rules.
    "E501",
]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
# Ship both ``reviewgate`` (engine) and ``reviewgate_action`` (GitHub Action runtime)
# in one wheel; ``sources`` maps tree layouts onto flat install paths.
only-include = ["src/reviewgate", "src/reviewgate_action/reviewgate_action"]

[tool.hatch.build.targets.wheel.sources]
"src/reviewgate" = "reviewgate"
"src/reviewgate_action/reviewgate_action" = "reviewgate_action"

[tool.hatch.build.targets.sdist]
# Whitelist the source tree so the sdist never bundles a local
# virtualenv, build cache, or editor scratch directory by accident.
include = [
    "src/reviewgate",
    "src/reviewgate_action",
    "alembic",
    "alembic.ini",
    "tests",
    "docs/DESIGN.md",
    "docs/ONBOARDING.md",
    "docs/QUICKSTART.md",
    "README.md",
    "action.yml",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "SUPPORT.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.ruff_cache",
    ".venv*",
    "venv",
    "dist",
    "build",
    ".github",
    ".cursor",
    "scripts",
]
